--- a/SchoolWebsite/index.scss
+++ b/SchoolWebsite/index.scss
@@ -87,8 +87,9 @@
                     top: 60px;
                     background: url(./img/sub_bg.png) center center repeat;
                     float: left;
+
                     a:hover {
-                        color: #ee9123!important;
+                        color: #ee9123 !important;
                         transition: .5s;
                     }
 
@@ -498,8 +499,8 @@
             }
 
             a {
-                color: #ffffff; 
-                transition: .5s; 
+                color: #ffffff;
+                transition: .5s;
             }
         }
 
@@ -681,13 +682,15 @@
                         box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
                         margin-top: -10px;
                         margin-bottom: 25px;
+
                         .date {
                             background: #871f27;
                             color: #ffffff;
                             transition: 0.5s;
                             border: 1px #871f27 solid;
                         }
-                        .infor{
+
+                        .infor {
                             background: #ffffff;
                             border-left: 5px #871f27 solid;
                             transition: 0.5s;
@@ -740,4 +743,163 @@
         // width: 50%;
     }
 
+}
+
+.link {
+    li {
+        border-right: none;
+        border-bottom: none;
+        float: left;
+        width: 14%;
+        line-height: 50px;
+        text-align: left;
+        border: 1px #ebebeb solid;
+
+        a {
+            font-size: 14px;
+            color: #333333;
+            background: url(https://www.zjkju.edu.cn/img/link_icon.png) 34px center no-repeat;
+            padding-left: 50px;
+        }
+    }
+}
+
+// 底部
+.Footer {
+    margin: 0 auto;
+    overflow: hidden;
+    text-align: center;
+    background: url(https://www.zjkju.edu.cn/img/foot_bg.png) center center repeat-x;
+    height: 201px;
+
+    .foot {
+        background: url(./img/foot_logo.png) center center no-repeat;
+        background-position: 450px;
+
+        .foot_l {
+            float: left;
+            color: #ffffff;
+            text-align: left;
+            margin-top: 18.5px;
+
+            dl dt {
+                border-left: 3px #ffffff solid;
+                font-size: 16px;
+                padding-left: 10px;
+                margin-bottom: 5px;
+            }
+
+            dl dd {
+                font-size: 12px;
+                line-height: 28px;
+            }
+        }
+
+        .foot_r {
+            float: right;
+            color: #ffffff;
+            font-size: 12px;
+            margin-top: 42.5px;
+
+            .wb {
+                float: left;
+            }
+
+            .wx {
+                margin-left: 48px;
+            }
+
+            img {
+                width: 92px;
+                height: 94px;
+                display: block;
+                margin-bottom: 10px;
+            }
+        }
+    }
+}
+
+// 最底部
+#footer p {
+    background: #313131;
+    line-height: 40px;
+    text-align: center;
+    font-size: 12px;
+    color: #ffffff;
+}
+
+// 搜索框
+input::-webkit-input-placeholder {
+    // 默认的 input框的placeholder 样式
+    color: white;
+    font-size: 13.3px;
+}
+.jsdh {
+    background: #ffffff;
+    position: relative;
+}
+
+// 导航未浮现最右侧的搜索框
+#toggle-search {
+    float: right;
+    background-position: -60px 0;
+}
+
+
+.search {
+    position: absolute;
+    right: 0px;
+    top: 0;
+    z-index: 99;
+    cursor: pointer;
+}
+
+#search-form {
+    // 弹出搜索框
+    -webkit-transition: max-height, 0.5s;
+    transition: max-height, 0.5s;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 240px;
+    margin-left: -220px;
+    max-height: 0;
+    overflow: hidden;
+    background-color: #e1e4e7;
+    z-index: 20;
+    input {
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        display: block;
+        height: 60px;
+        width: 1140px;
+    }
+    input[type="search"] {
+        width: 100%;
+        padding: 0 5px 0 10px;
+        background: #871F27;
+        border: none;
+        color: #f5f5f5;
+    }
+    // 搜索logo
+    input[type="image"] {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 60px;
+        margin: 0;
+        padding: 0;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #516270;
+        border: none;
+        cursor: pointer;
+        float: right;
+    }
+}
+
+    // 当类名open的时候
+#search-form.open{
+    max-height: 60px;
 }
